# demon-bluff-deducer

./: .gitignore  Cargo.toml  rustfmt.toml
crates/demon-bluff-deducer/: Cargo.toml
crates/demon-bluff-deducer/src/: main.rs  plugin.rs  root_state.rs
crates/demon-bluff-deducer/src/evaluator/: colours.rs  edge.rs  edge_link.rs  mod.rs  node.rs  plugin.rs  state.rs
crates/demon-bluff-deducer/src/evaluator/components/: breakpoint.rs  debugger_channels.rs  debugger_context.rs  game_state.rs  mod.rs  prediction.rs
crates/demon-bluff-deducer/src/evaluator/events/: breakpoint.rs
crates/demon-bluff-deducer/src/evaluator/systems/: camera_controls.rs  mod.rs  (+6 more)
crates/demon-bluff-deducer/src/menu/: mod.rs  plugin.rs  setup.rs  state.rs
crates/demon-bluff-deducer/src/plugins/: mod.rs
crates/demon-bluff-deducer/src/systems/: mod.rs  on_resize.rs  setup.rs
crates/demon-bluff-logic-engine/: Cargo.toml  test1.json  test2.json
crates/demon-bluff-logic-engine/src/: build_board_layouts.rs  build_expression_for_villager_set.rs  debugger.rs  engine.rs  expression_assertion.rs  hypothesis.rs  lib.rs  optimized_expression.rs  player_action.rs  prediction_error.rs  reveal_strategy.rs  with_theoretical_testimony.rs
crates/demon-bluff-logic-engine/src/desires/: mod.rs  reveal_villager.rs  use_ability.rs
crates/demon-bluff-logic-engine/src/engine/: cycle.rs  dependencies.rs  depth.rs  fitness_and_action.rs  index_reference.rs  iteration_data.rs  misc.rs  mod.rs  stack_data.rs
crates/demon-bluff-logic-engine/src/hypotheses/: _template.rs  ability.rs  ability_index.rs  all_evils_accounted_for.rs  appears_evil.rs  archetype_in_play.rs  corruption_in_play.rs  execute.rs  execute_index.rs  gather_information.rs  hypothesis_expression.rs  is_corrupt.rs  is_evil.rs  is_lying.rs  is_truly_archetype.rs  is_truthful.rs  master.rs  mod.rs  need_testimony.rs  negate.rs  reveal.rs  reveal_index.rs  revealing_is_safe.rs  testimony.rs  testimony_condemns.rs  testimony_condemns_expression.rs  testimony_exonerates.rs  testimony_exonerates_expression.rs  testimony_expression.rs  true_identity.rs
crates/demon-bluff-logic-engine/tests/: game_set_1.rs  simple_game_1.rs  simple_game_2.rs  simple_game_3.rs  simple_games.rs  test_game_1.rs  test_helpers.rs  test_reveal_curiosity.rs  tests.rs
crates/demon-bluff-logic-engine/tests/game_states/: gemcrafter_1_says_5_good.json  simple_game_3_obvious_kill.json
crates/demon-bluff-logic-engine/tests/helpers/: mod.rs
crates/demon-bluff-logic-engine/tests/simple_strategy/: game_set_1.rs  game_set_2.rs  game_set_3.rs  game_set_4.rs  mod.rs
(+122 files in other folders)
