[package]
name = "demon-bluff-deducer"
version = "0.1.0"
edition = "2024"

[dependencies]
# anyhow = "1.0.99"
# async-channel = "2.5.0"
# bevy = "0.16.1"
demon-bluff-gameplay-engine = { path = "../demon-bluff-gameplay-engine" }
demon-bluff-logic-engine = { path = "../demon-bluff-logic-engine" }
#force_graph = "0.3.2"
# image = { version = "0.25.6", default-features = false, features = ["png"] }
# log = "0.4.27"
# ocrs = "0.10.4"
# rten = "0.21.0"
# rustautogui = "2.5.0"
serde_json = "1.0.143"
# thiserror = "2.0.16"
