[package]
name = "demon-bluff-logic-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
demon-bluff-gameplay-engine = { path = "../demon-bluff-gameplay-engine" }
enum_delegate = "0.2.0"
thiserror = "2.0.16"
log = "0.4.27"
enum-display-derive = "0.1.1"
serde_json = "1.0.143"
serde = { version = "1.0.219", features = ["serde_derive"] }
itertools = "0.14.0"

[dev-dependencies]
colog = "1.3.0"
